# lab05_parsing

./: .gitignore  CMakeLists.txt  Parsing_Lab_City.xml  README.md  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.ui  parsing.pro
parser/: SceneDefinition.h  SceneParser.cpp  SceneParser.h  ScenefileReader.cpp  ScenefileReader.h  scenedata.h  scenefilereader.cpp  sceneparser.cpp
ui/: GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.ui
utils/: CS123SceneData.h  CS123SceneLoader.cpp  CS123SceneLoader.h  CS123XmlSceneParser.cpp  CS123XmlSceneParser.h
